2006-05-26  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: build skip list for SelectFamily
	so that a person cannot be his own parent
	* src/Editors/_EditFamily.py: don't allow a person to be his own parent
	* src/Selectors/_BaseSelector.py: Add skipping of handles
	* src/DisplayModels/_BaseModel.py: Add skipping of handles
	* src/DisplayModels/_MediaModel.py: Add skipping of handles
	* src/DisplayModels/_RepositoryModel.py: Add skipping of handles
	* src/DisplayModels/_SourceModel.py: Add skipping of handles
	* src/DisplayModels/_EventModel.py: Add skipping of handles
	* src/DisplayModels/_FamilyModel.py: Add skipping of handles
	* src/DisplayModels/_PlaceModel.py: Add skipping of handles

2006-05-25  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_NoteTab.py (NoteTab.flow_changed): save flow status
	in Note
	* src/Merge/_MergeSource.py: note handling on source merge
	* src/glade/mergedata.glade: note handling on source merge
	* src/Makefile.am: remove deleted files
	* configure.in: add Merge directory

2006-05-25  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: More rework, still in progress.

2006-05-25  Don Allingham  <don@gramps-project.org>
	* src/Merge/_MergePlace.py: handle notes
	* src/glade/mergedata.glade: handle notes
	* src/DataViews/_PersonView.py: Merge module support
	* src/Merge/_MergeSource.py: broken out of MergeData.py
	* src/Merge/__init__.py: support of module
	* src/Merge/Makefile.am: added
	* src/Merge/_MergePlace.py: broken out of MergeData.py
	* src/Merge/_MergePerson.py: renamed
	* src/DataViews/_SourceView.py: source merge support
	* src/DataViews/_PlaceView.py: place merge support
	* src/glade/mergedata.glade: place merge support
	* src/MergeData.py: place merge support
	* src/PageView.py: add support for multiselection

2006-05-24  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: Start major rework, still in progress.
