@@ -1,3 +1,8 @@
+2006-05-26  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/verify.glade: update interface.
+	* src/plugins/Verify.py: More improvements. Still need to finish
+	filtering and object editing on double click.
+
 2006-05-26  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_RelationView.py: build skip list for SelectFamily
 	so that a person cannot be his own parent
